--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,11 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-
+*.cs linguist-detectable=true
+*.js linguist-detectable=false
+*.css linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
